@@ -1,11 +1,10 @@
 package com.example.springreactive;
 
-import java.util.Arrays;
+import java.util.List;
 
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
-import org.springframework.cloud.client.discovery.EnableDiscoveryClient;
-import org.springframework.cloud.openfeign.EnableFeignClients;
 import org.springframework.context.ConfigurableApplicationContext;
 import org.springframework.context.annotation.Bean;
 import org.springframework.web.reactive.function.server.RouterFunction;
@@ -15,18 +14,15 @@ import org.springframework.web.reactive.function.server.ServerResponse;
 import com.example.springreactive.controller.UserController;
 import com.example.springreactive.model.ClientUser;
 
-import jakarta.annotation.Resource;
 import lombok.extern.slf4j.Slf4j;
 
 /**
- * SpringReactiveApplication
+ * 应用程序启动类
  * 
  * @author weiwei
  * @version v1
  * @since 2022年4月26日,下午5:53:23
  */
-@EnableFeignClients
-@EnableDiscoveryClient
 @SpringBootApplication
 @Slf4j
 public class SpringReactiveApplication {
@@ -34,16 +30,23 @@ public class SpringReactiveApplication {
 	public static void main(String[] args) {
 		ConfigurableApplicationContext context = SpringApplication.run(SpringReactiveApplication.class, args);
 		log.info("工厂中定义的 bean 数量 = {}", context.getBeanDefinitionCount());
-//		Arrays.stream(context.getBeanDefinitionNames()).forEach(System.err::println);
+//		java.util.stream.Stream.of(context.getBeanDefinitionNames()).forEach(System.err::println);
 	}
 
-	@Resource
+	@Autowired
 	private UserController userController;
 
+	/**
+	 * 定义路由
+	 * 
+	 * @author zhang weiwei
+	 * @since 2023年8月3日,下午1:53:20
+	 * @return
+	 */
 	@Bean
 	RouterFunction<ServerResponse> routerFunction() {
 		return RouterFunctions.route()//
-				.GET("/", request -> ServerResponse.ok().bodyValue(Arrays.asList("你好，", "世界！")))//
+				.GET("/", request -> ServerResponse.ok().bodyValue(List.of("你好，", "世界！")))//
 				.GET("/user/get", request -> ServerResponse.ok().body(userController.getClientUser(), ClientUser.class))
 				.POST("/user/add", request -> request.bodyToMono(ClientUser.class)//
 						.flatMap(i -> userController.addClientUser(i))//
@@ -54,6 +57,9 @@ public class SpringReactiveApplication {
 				.DELETE("/user/del/{userId}",
 						request -> ServerResponse.ok()
 								.body(userController.delClientUser(request.pathVariable("userId")), Integer.class))
+				.GET("/user/get/{userId}",
+						request -> ServerResponse.ok().body(
+								userController.getClientUserByUserId(request.pathVariable("userId")), ClientUser.class))
 				.build();
 	}
 }
